# django_rest_api

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
test_task/: docker-compose.yml
test_task/api/: models.py  serializers.py  urls.py  views.py
test_task/api/migrations/: 0001_initial.py  0002_remove_incident_latitude_remove_incident_longitude_and_more.py  0003_alter_incident_created_at_alter_incident_location_and_more.py
test_task/test_task/: settings.py  urls.py
